--- a/Laboratorios Dia 1 & 2/docker-compose.yml
+++ b/Laboratorios Dia 1 & 2/docker-compose.yml
@@ -1,30 +1,27 @@
-version: '3.8'
-
 services:
   soc101:
     build: ./netsec-playgrounds
-    container_name: soc101_dashboard
     ports:
-      - "8080:80"
-      - "21:21"
+      - "8080:80"                  # Web
+      - "21:21"                    # FTP Control
+      - "21100-21110:21100-21110"  # FTP Pasivo
     networks:
       - socnet
     depends_on:
       - webgoat
+    restart: unless-stopped
 
   webgoat:
     image: webgoat/webgoat
-    container_name: webgoat_lab
+    ports:
+      - "8081:8080"
+      - "9091:9090"
     networks:
       - socnet
-    ports:
-      - "8081:8080"   # WebGoat directo
-      - "9091:9090"   # WebWolf (opcional)
     restart: always
 
   nginx:
     image: nginx
-    container_name: soc101_proxy
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
@@ -34,7 +31,7 @@ services:
     depends_on:
       - soc101
       - webgoat
-    restart: unless-stopped   # <-- AHORA sí dentro de nginx
+    restart: unless-stopped
 
 networks:
   socnet:
