--- a/Laboratorios Dia 1 & 2/nginx.conf
+++ b/Laboratorios Dia 1 & 2/nginx.conf
@@ -12,7 +12,7 @@ server {
     }
 
     # WebGoat bajo /lab/webgoat/  -> mapea al context real /WebGoat/
-    location /lab/webgoat/ {
+    location /WebGoat/ {
         proxy_pass http://webgoat:8080/WebGoat/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
